# EnergysESP32FirmwareV1

./: CMakeLists.txt  Makefile  c_cpp_properties.old  partitions.csv  sdkconfig.defaults  sdkconfig.old  todolist.txt
components/WS2182/: led_strip_rmt_ws2812.c
components/bh1750/: bh1750.c  idf_component.yml
components/bh1750/include/: bh1750.h
components/button/: CMakeLists.txt  button.c
components/button/include/: button.h
components/light_driver/: CMakeLists.txt  iot_led.c  light_driver.c
components/light_driver/include/: iot_led.h  light_driver.h
components/light_handle/: CMakeLists.txt  light_handle.c
components/light_handle/include/: light_handle.h
components/mesh_mqtt_handle/: CMakeLists.txt  component.mk  mesh_mqtt_handle.c
components/mesh_mqtt_handle/include/: mesh_mqtt_handle.h
components/mesh_utils/: CMakeLists.txt  mesh_utils.c
components/mesh_utils/include/: mesh_utils.h
main/: CMakeLists.txt  EnergysESP32Firmware.c  Kconfig.projbuild
